# talk-api-client-rs

./: Cargo.toml  readme.md
examples/: auth.rs
src/: agent.rs  credential.rs  lib.rs  response.rs
src/auth/: mod.rs  resources.rs  status.rs
src/auth/xvc/: default.rs  mod.rs
