[package]
name = "talk-api-client"
version = "0.1.0"
edition = "2021"
categories = [ "api-bindings" ]
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
sha2 = "0.9.8"
hex = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full"] }